# dyson-sphere-mcp

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PLAN.md  README.md  prd.md  rank_oil.py
.claude/: settings.local.json
.gemini/: settings.json
api/: .gitignore  pyproject.toml  server.py
api/mock/: find_item_transport_1208.json  get_assembler_details_103.json  get_galaxy_details.json  get_game_info.json  get_ils_details.json  get_ils_details_103.json  get_lab_details.json  get_planet_resources.json  get_planet_resources_101.json  get_planet_resources_102.json  get_planet_resources_103.json  get_planet_resources_201.json  get_planet_resources_202.json  get_planet_routes_4501.json  get_planet_routes_6001.json  get_power_grid_status.json  get_power_grids_by_planet_3104.json  get_production_stats.json  get_research_by_planet.json  get_research_progress.json  get_shipping_routes_for_ils.json  get_shipping_routes_for_ils_572.json  get_stars.json  get_tech_queue.json  get_upgrades.json  list_ils_per_planet.json  list_planets.json
api/tools/: find_longest_route.py  rank_oil.py  scrape_icons.py  scrape_tech_icons.py
cmds/: build-plugin.sh  check-log.sh  check-servers.sh  run-api.sh  run-chrome.sh  run-web.sh  stop-all.sh
plugin/: .gitignore  dsp_mcp.slnx
plugin/cmds/: build-plugin.sh
plugin/src/DSPMCP/: DSPMCP.csproj  JsonHelper.cs  Plugin.cs  WsServer.cs
web/: .gitignore  package.json  vite.config.ts
web/.svelte-kit/: ambient.d.ts
web/src/: app.css
web/src/lib/: api.ts  types.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts
(+25 files in other folders)
